// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders default input 1`] = `
<div
  class="text--input-regular text--input-top sc-bdVaJa cBKMGA"
>
  
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      class="sc-bxivhb hBvKYg"
      id="test1__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX gWpzXV"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders disabled input 1`] = `
<div
  class="text--input-regular text--input-top text--input-disabled sc-bdVaJa cBKMGA"
>
  
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      class="sc-bxivhb hBvKYg"
      disabled=""
      id="test1__input"
      name="test1"
      placeholder=""
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX gWpzXV"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders input with error 1`] = `
<div
  class="text--input-regular text--input-top text__error sc-bdVaJa cBKMGA"
>
  
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      class="sc-bxivhb hBvKYg"
      id="test1__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="true"
      class="sc-ifAKCX gWpzXV"
      role="alert"
    >
      Something Went Wrong
    </label>
  </div>
</div>
`;

exports[`Input renders input without name 1`] = `
<div
  class="text--input-regular text--input-top sc-bdVaJa cBKMGA"
>
  
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      class="sc-bxivhb hBvKYg"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX gWpzXV"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders large input 1`] = `
<div
  class="text--input-large text--input-top sc-bdVaJa cBKMGA"
>
  <label
    class="sc-bwzfXH ddQPaW"
    id="test1firstname__label"
    style="font-size: 20px;"
  >
    First Name
  </label>
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      aria-labelledby="test1firstname__label"
      class="sc-bxivhb hBvKYg"
      id="test1firstname__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX gWpzXV"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders left labeled input 1`] = `
<div
  class="text--input-regular text--input-left sc-bdVaJa cBKMGA"
>
  
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      class="sc-bxivhb hBvKYg"
      id="test1__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX gWpzXV"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders small input 1`] = `
<div
  class="text--input-small text--input-top sc-bdVaJa cBKMGA"
>
  
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      class="sc-bxivhb hBvKYg"
      id="test1__input"
      name="test1"
      placeholder="test hint"
      style="color: blue;"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX gWpzXV"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders top labeled input 1`] = `
<div
  class="text--input-regular text--input-top sc-bdVaJa cBKMGA"
>
  
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      class="sc-bxivhb hBvKYg"
      id="test1__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX gWpzXV"
      role="alert"
    />
  </div>
</div>
`;
